2004-05-23  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: send an xml:lang attribute in messages
    * jsm/modules/mod_admin.c: same
    * jsm/modules/mod_register.c: same
    * jabberd/base/base_accept.c: don't send <handshake/> after auth failure
    * jabberd/lib/jutil.c: valid priorities are in range [-128,127]
    * jsm/sessions.c: same
    * jsm/util.c: same
    * jsm/modules/mod_announce.c: same (and do not send to negative priority)
    * jsm/modules/mod_groups.c: same
    * jsm/modules/mod_offline.c: same (and do only deliver to non-negative)
    * jsm/modules/mod_presence.c: same

2004-05-22  Matthias Wimmer  <m@tthias.net>

    * configure.in: creating platform-settings file for old transports
    * dialback/Makefile.am: looking for jabberdlib.h at the right place
    * dnsrv/Makefile.am: same
    * jsm/Makefile.am: same
    * jsm/modules/Makefile.am: same
    * pthsock/Makefile.am: same
    * xdb_file/Makefile.am: same
    * jabberd/base/Makefile.am: same
    * jabberd/jabberd.h: including jabberdlib.h instead of lib/lib.h
    * jabberd/lib/base64.c: same
    * jabberd/lib/crc32.c: same
    * jabberd/lib/expat.c: same
    * jabberd/lib/genhash.c: same
    * jabberd/lib/jid.c: same
    * jabberd/lib/jpacket.c: same
    * jabberd/lib/jutil.c: same
    * jabberd/lib/karma.c: same
    * jabberd/lib/pool.c: same
    * jabberd/lib/pproxy.c: same
    * jabberd/lib/rate.c: same
    * jabberd/lib/sha.c: same
    * jabberd/lib/socket.c: same
    * jabberd/lib/str.c: same
    * jabberd/lib/xhash.c: same
    * jabberd/lib/xmlnode.c: same
    * jabberd/lib/xstream.c: same
    * jabberd/lib/asciitab.h: removed, using installed expat
    * jabberd/lib/hashtable.c: same
    * jabberd/lib/hashtable.h: same
    * jabberd/lib/iasciitab.h: same
    * jabberd/lib/latin1tab.h: same
    * jabberd/lib/Makefile.am: same
    * jabberd/lib/nametab.h: same
    * jabberd/lib/utf8tab.h: same
    * jabberd/lib/lib.h: renamed lib.h to jabberdlib.h